--- a/src/assets/css/datepicker.css
+++ b/src/assets/css/datepicker.css
@@ -41,8 +41,10 @@
 .chakra-ui-dark .react-datepicker__day-name {
   color: #dadada;
 }
+.react-datepicker__triangle {
+  left: 200px !important;
+}
 .chakra-ui-dark .react-datepicker__triangle {
-  left: 230px !important;
   border-top-color: #1a202c !important;
   border-bottom-color: #1a202c !important;
 }
